--- a/app/src/main/res/layout/activity_item_detail.xml
+++ b/app/src/main/res/layout/activity_item_detail.xml
@@ -18,9 +18,9 @@
     <!--include layout="@layout/content_notification_detail" /-->
     <include layout="@layout/content_item_detail" />
 
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+    <!--android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_menu_share"/>
+        android:src="@android:drawable/ic_menu_share"/-->
 
 </android.support.design.widget.CoordinatorLayout>
