--- a/app/src/main/res/menu/menu_item_detail.xml
+++ b/app/src/main/res/menu/menu_item_detail.xml
@@ -8,7 +8,7 @@
         android:id="@+id/menu_item_share"
         app:showAsAction="ifRoom|never"
         android:title="@string/thiruvalluvar"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
         android:actionProviderClass=
             "android.widget.ShareActionProvider" />
 
