--- a/app/src/main/res/menu/menu_item_detail.xml
+++ b/app/src/main/res/menu/menu_item_detail.xml
@@ -12,4 +12,12 @@
         android:actionProviderClass=
             "android.widget.ShareActionProvider" />
 
+    <item
+        android:id="@+id/menu_item_favourite"
+        app:showAsAction="ifRoom|never"
+        android:title="@string/thiruvalluvar"
+        android:icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider" />
+
 </menu>
