--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         tools:context="com.ext.techapp.thirukkural.ItemDetailActivity">
 
-        <TextView android:layout_width="wrap_content" android:layout_height="fill_parent"
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin" android:text="@string/about_thirukkural"
             android:id="@+id/about_fragment_text" android:textSize="12dp"
             />
