--- a/app/src/main/res/menu/menu_item_detail.xml
+++ b/app/src/main/res/menu/menu_item_detail.xml
@@ -15,9 +15,13 @@
     <item
         android:id="@+id/menu_item_favourite"
         app:showAsAction="ifRoom|never"
-        android:title="@string/thiruvalluvar"
-        android:icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"
-        android:actionProviderClass=
-            "android.widget.ShareActionProvider" />
+        android:title="@string/favorite"
+        android:icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"/>
+
+    <item
+        android:id="@+id/menu_item_home"
+        app:showAsAction="ifRoom|never"
+        android:title="@string/home"
+        android:icon="@drawable/ic_home_white_24dp"/>
 
 </menu>
