--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -9,4 +9,8 @@
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+
+    <!--item android:id="@+id/remove_favortie" android:title="@string/remove_favorite"
+        android:orderInCategory="100" app:showAsAction="never" /-->
+
 </menu>
