final-added favorite- added paal

--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -14,7 +14,7 @@
     <FrameLayout
         android:id="@+id/item_list_fragment_layout"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         />
 
 </RelativeLayout>
